2011-08-20  Stefan Sauer  <ensonic@users.sf.net>

	* Jeskola/Distortion/Distortion.cpp:
	* Jeskola/Distortion/Makefile.am:
	* Jeskola/Makefile.am:
	* configure.ac:
	* Jeskola/Distortion/Makefile.am (added):
	  Port another machine.

2011-08-20  Stefan Sauer  <ensonic@users.sf.net>

	* FSM/Makefile.am:
	* FSM/ScatMan/Makefile.am:
	* FSM/ScatMan/ScatMan.cpp:
	* FSM/ScrapMan/Makefile.am:
	* FSM/ScrapMan/ScrapMan.cpp:
	* FSM/SprayMan/Makefile.am:
	* FSM/SprayMan/SprayMan.cpp:
	* FSM/TapMan/Makefile.am:
	* FSM/TapMan/TapMan.cpp:
	* FSM/TunaMan/Makefile.am:
	* FSM/TunaMan/TunaMan.cpp:
	* FSM/WahMan/WahMan.cpp:
	* FSM/WahManPro/Makefile.am:
	* FSM/WahManPro/WahManPro.cpp:
	* configure.ac:
	* FSM/TapMan/Makefile.am (added):
	* FSM/ScatMan/Makefile.am (added):
	* FSM/SprayMan/Makefile.am (added):
	* FSM/WahManPro/Makefile.am (added):
	* FSM/TunaMan/Makefile.am (added):
	* FSM/ScrapMan/Makefile.am (added):
	  Port more FSM effects.

2011-08-20  Stefan Sauer  <ensonic@users.sf.net>

	* FSM/Makefile.am:
	* FSM/Philta/Makefile.am:
	* FSM/Philta/Philta.cpp:
	* configure.ac:
	* FSM/Philta/Makefile.am (added):
	  Ported Philta.

2011-06-25  Stefan Sauer  <ensonic@users.sf.net>

	* FSM/Infector/Infector.cpp:
	  Fix array size calculation for 64bit arch.

2011-01-28  Stefan Kost  <ensonic@users.sf.net>

	* Jeskola/Mul/Makefile.am:
	* Jeskola/Mul/Mul.cpp:
	* common/auxbus/EditorDlg.cpp:
	* common/auxbus/EditorDlg.h:
	* common/auxbus/StdAfx.cpp:
	* common/auxbus/StdAfx.h:
	* common/auxbus/auxbus.cpp:
	* common/auxbus/auxbus.dsp:
	* common/auxbus/auxbus.h:
	* common/auxbus/auxbus.rc:
	* common/auxbus/internal.h:
	* common/auxbus/resource.h:
	* configure.ac:
	* common/auxbus/auxbus.cpp (svn:keywords, svn:eol-style):
	* common/auxbus/auxbus.dsp (svn:eol-style):
	* common/auxbus/resource.h (svn:keywords, svn:eol-style):
	* common/auxbus/auxbus.h (svn:keywords, svn:eol-style):
	* common/auxbus/EditorDlg.h (svn:keywords, svn:eol-style):