@@ -1,5 +1,16 @@
 2011-08-20  Stefan Sauer  <ensonic@users.sf.net>
 
+	* CyanPhase/AtomStereoMeld/Makefile.am:
+	* CyanPhase/AtomStereoMeld/atom.cpp:
+	* CyanPhase/Makefile.am:
+	* configure.ac:
+	* CyanPhase/AtomStereoMeld (added):
+	* CyanPhase/AtomStereoMeld/atom.cpp (added):
+	* CyanPhase/AtomStereoMeld/Makefile.am (added):
+	  Add another effect.
+
+2011-08-20  Stefan Sauer  <ensonic@users.sf.net>
+
 	* Jeskola/Distortion/Distortion.cpp:
 	* Jeskola/Distortion/Makefile.am:
 	* Jeskola/Makefile.am:
